--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
   "name": "my-new-pwa",
   "short_name": "my-new-pwa",
-  "start_url": "https://jigisha7874.github.io/INFO-6128-Share-Target-Lab.github.io/",
-  "scope": "https://jigisha7874.github.io/INFO-6128-Share-Target-Lab.github.io/",
+  "start_url": "https://aleeshawadhera.github.io/INFO-6128-Week2-Lab/",
+  "scope": "https://aleeshawadhera.github.io/INFO-6128-Week2-Lab/",
   "display": "standalone",
   "orientation": "portrait",
   "background_color": "#fff",
@@ -43,7 +43,7 @@
   
     ],
   "share_target": {
-    "action": "https://jigisha7874.github.io/INFO-6128-Share-Target-Lab.github.io/",
+    "action": "https://aleeshawadhera.github.io/INFO-6128-Week2-Lab/",
     "method": "GET",
     "params": {
       "title": "title",
